TEST_PROGRAMS/VALID/05/array.go
/* Array. */

package main

func main() {
	var s[5] string
	s[0] = "Hello"
	s[1] = "World"
	s[2] = "I'm"
	s[3] = "An"
	s[4] = "Array"
}
