TEST_PROGRAMS/INVALID/05/interpreted_string_closed_with_squote.go
/* Interpreted string closed with ' instead of ". */

package main

func main() {
  // Error: Interpreted string closed with ' instead of "
  s := "Hello world!'
}
